fix spacing on mobile around detail element

--- a/site/sass/components/_resources.scss
+++ b/site/sass/components/_resources.scss
@@ -1,6 +1,6 @@
 // Styling for Resources component
 .resources {
-  padding: 1.5rem 1rem 0;
+  padding: 1.5rem 1.75rem 0;
   position: relative;
 
   @include mq($bkpt-tech-details--2-cols) {
