--- a/site/sass/globals/extends/_expanding-nav.scss
+++ b/site/sass/globals/extends/_expanding-nav.scss
@@ -1,4 +1,5 @@
 %expanding-nav {
+  $block-padding: 1.75rem;
   background-color: var(--grey-100);
 
   &[open] {
@@ -10,7 +11,7 @@
     background-color: var(--grey-100);
     cursor: pointer;
     list-style: none;
-    padding: 1rem;
+    padding: 1rem $block-padding;
 
     // Chrome/Webkit needs this non-standard selector
     &::-webkit-details-marker {
@@ -25,8 +26,8 @@
 
   &__nav {
     margin-top: 0.75rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: $block-padding;
+    padding-right: $block-padding;
   }
 
   &--expand {
